[package]
name = "lua-protobuf-rs"
version = "0.1.2"
edition = "2021"
authors = ["mikai233"]
description = "lua protobuf"
homepage = "https://github.com/mikai233/lua-protobuf-rs"
keywords = ["protobuf", "lua"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mikai233/lua-protobuf-rs"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["lua54", "module"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
module = ["mlua/module"]
google_protoc = []
vendored_protoc = ["protoc-bin-vendored"]

[dependencies]
mlua = { version = "0.9.1", features = ["macros"] }
anyhow = "1.0.83"
walkdir = "2.5.0"
tempfile = "3.10.1"
protobuf = "3.4.0"
protobuf-parse = "3.4.0"
protoc-bin-vendored = { version = "3.0.0", optional = true }
