[package]
name = "lua-protobuf-rs"
version = "0.2.0"
edition = "2024"
authors = ["mikai233"]
description = "lua protobuf"
homepage = "https://github.com/mikai233/lua-protobuf-rs"
keywords = ["protobuf", "lua"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mikai233/lua-protobuf-rs"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
debug = "line-tables-only"
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["lua54", "module", "mlua/anyhow"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
luajit52 = ["mlua/luajit52"]
luau = ["mlua/luau"]
module = ["mlua/module"]
google_protoc = []
vendored_protoc = ["protoc-bin-vendored"]

[dependencies]
mlua = { version = "0.10.3", features = ["macros", "anyhow"] }
anyhow = "1.0.95"
walkdir = "2.5.0"
tempfile = "3.16.0"
protobuf = "3.7.2"
protobuf-parse = "3.7.2"
protoc-bin-vendored = { version = "3.1.0", optional = true }
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "debug", "from", "into"] }
